epic-gantt-chart/force-app/main/default/objects/Milestone__c/Milestone__c.object-meta.xml
<CustomObject>
    <label>Milestone</label>
    <pluralLabel>Milestones</pluralLabel>
    <nameField>
        <displayFormat>M-{000}</displayFormat>
        <label>Milestone Number</label>
        <startingNumber>340</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>