epic-gantt-chart/force-app/main/default/objects/Milestone__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <label>Epic</label>
    <type>MasterDetail</type>
    <referenceTo>Epic__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
</CustomField>