epic-gantt-chart/force-app/main/default/objects/Milestone__c/fields/Milestone_Description__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Description__c</fullName>
    <label>Milestone Description</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>