epic-gantt-chart/force-app/main/default/objects/Milestone__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Controls the top-to-bottom order of milestones that share a Due Date in the Gantt chart. Milestones without a value sort last.</description>
</CustomField>