epic-gantt-chart/force-app/main/default/objects/Milestone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <label>All Milestones</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Epic__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Milestone_Description__c</columns>
</ListView>